# EdePy

yorubapy/: README.md  complex_example.yoruba  error_test.yoruba  example.yoruba  pyproject.toml  simple_error_test.yoruba
yorubapy/src/EdePy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
yorubapy/src/edepy/: __init__.py  cli.py
yorubapy/src/yorubapy/: __init__.py  cli.py  transpile.py
