[project]
name = "EdePy"
version = "0.1.0"
description = "Yorùbá to Python transpiler and CLI (tokenize-based)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "you@example.com" }
]
keywords = ["yoruba", "python", "transpiler", "tokenize", "localization", "edepy"]

dependencies = []

[project.urls]
Homepage = "https://example.com"
Repository = "https://example.com/repo"

[project.scripts]
edepy = "edepy.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

